# sqldelight

./: License.txt  README-zh_CN.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.fleet/: receipt.json
.kotlin/metadata/kotlinCInteropLibraries/: test-cinterop-sqlite-7fJhqA.klib
.kotlin/metadata/kotlinTransformedMetadataLibraries/: app.cash.paging-paging-common-3.1.1-0.3.1-commonMain-3d2jUw.klib  app.cash.paging-paging-common-3.1.1-0.3.1-nativeMain-3d2jUw.klib  app.cash.paging-paging-common-3.1.1-0.3.1-nonJsMain-3d2jUw.klib  app.cash.paging-paging-common-3.1.1-0.3.1-nonJvmMain-3d2jUw.klib  app.cash.paging-paging-runtime-uikit-3.1.1-0.3.1-iosMain-Yt04ag.klib  app.cash.turbine-turbine-1.1.0-OHOS-003-commonMain-bXWpUA.klib  co.touchlab-sqliter-driver-1.3.1-OHOS-001-linuxMain-kD3n0w.klib  co.touchlab-sqliter-driver-1.3.1-OHOS-001-nativeCommonMain-kD3n0w.klib  co.touchlab-stately-common-1.2.5-commonMain-PI_Euw.klib  co.touchlab-stately-common-1.2.5-nativeCommonMain-PI_Euw.klib  co.touchlab-stately-concurrency-1.2.5-commonMain-JxSiGQ.klib  co.touchlab-stately-concurrency-1.2.5-darwinMain-4z42qA.klib  co.touchlab-stately-concurrency-1.2.5-nativeCommonMain-JxSiGQ.klib  co.touchlab-stately-concurrency-2.0.7-OHOS-003-commonMain-XpInsw.klib  (+23 more)
buildLogic/: settings.gradle
composeApp/: build.gradle.kts  composeApp.podspec  sqlite3_compile_guide.md
drivers/driver-test/: build.gradle
drivers/native-driver/: build.gradle
extensions/androidx-paging3/: build.gradle
extensions/coroutines-extensions/: build.gradle
gradle/: gradle-mvn-push.gradle  libs.versions.toml
harmonyApp/: build-profile.json5  hvigorfile.ts  log.txt
harmonyApp/AppScope/: app.json5
harmonyApp/entry/: hvigorfile.ts  oh-package-lock.json5  oh-package.json5
harmonyApp/entry/libs/: compose.har  (+1 more)
harmonyApp/entry/src/main/cpp/: CMakeLists.txt  libkn.cpp  napi_init.cpp
harmonyApp/entry/src/main/cpp/include/: libkn_api.h  napiBindings.h
harmonyApp/entry/src/main/cpp/types/libentry/: Index.d.ts
iosApp/: podfile
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
(+92 files in other folders)
